Update documentation for 2Q cache policy
- Revised the 2Q policy documentation to clarify its goal, core ideas, and data structures, enhancing understanding of the two-queue design.
- Improved descriptions of operations, including `insert`, `get`, and `evict`, to reflect changes in item management and eviction strategies.
- Updated complexity and overhead sections for accuracy, ensuring users have clear expectations of performance characteristics.
- Enhanced references for further reading, maintaining consistency with other policy documents in the library.

--- a/docs/policies/2q.md
+++ b/docs/policies/2q.md
@@ -1,7 +1,7 @@
 # 2Q
 
 ## Goal
-Reduce scan pollution with a simple two-queue design that approximates “access twice before protection”.
+Reduce scan pollution with a simple two-queue design that approximates "access twice before protection".
 
 ## Core Idea
 Maintain:
@@ -15,26 +15,28 @@ Behavior:
 
 ## Core Data Structures
 Common implementation:
-- `HashMap<K, EntryMeta>` where `EntryMeta` includes which queue it’s in and list pointers
-- Two intrusive lists:
-  - FIFO list for `A1`
-  - LRU list for `Am`
+- `HashMap<K, NodePtr>` mapping keys to node pointers
+- Two doubly-linked lists:
+  - FIFO list for `A1` (newest at front, oldest at back)
+  - LRU list for `Am` (MRU at front, LRU at back)
 
 Optional (from the original paper):
-- `A1out`: “ghost” history of recently evicted `A1` items to inform admission/tuning
+- `A1out`: "ghost" history of recently evicted `A1` items to inform admission/tuning (see `TwoQWithGhost`)
 
 ## Operations
-- `insert`: into `A1` (FIFO tail)
+- `insert`: into `A1` front (new items enter; oldest at back for eviction)
 - `get`:
-  - if in `A1`: move to `Am` (LRU head)
-  - if in `Am`: move to `Am` head
+  - if in `A1`: promote to `Am` front (MRU position)
+  - if in `Am`: move to `Am` front (MRU position)
 - `evict`:
-  - evict from `A1` if it exceeds its target size; otherwise evict from `Am`
+  - if `A1` exceeds its target size: evict from `A1` back (oldest)
+  - otherwise: evict from `Am` back (LRU)
+  - fallback: evict from `A1` even if under cap when `Am` is empty
 
 ## Complexity & Overhead
-- O(1) operations with intrusive lists + hashmap index
-- Requires tuning partition sizes (`|A1|` vs `|Am|`)
+- O(1) operations with doubly-linked lists + hashmap index
+- Requires tuning partition sizes (`|A1|` vs `|Am|`) via `a1_frac` parameter
 
 ## References
-- Johnson, Shasha (1994): “2Q: A Low Overhead High Performance Buffer Management Replacement Algorithm”.
+- Johnson, Shasha (1994): "2Q: A Low Overhead High Performance Buffer Management Replacement Algorithm".
 - Wikipedia: https://en.wikipedia.org/wiki/Cache_replacement_policies
