Enhance documentation for eviction policy feature flags
- Updated README and various documentation files to clarify that each eviction policy is gated behind a feature flag, improving modularity for builds.
- Added feature flag details for each policy in the documentation, ensuring users can easily identify and enable the necessary policies for their use cases.
- Included examples for minimal builds and emphasized the benefits of targeted feature usage for performance optimization.

--- a/docs/policies/2q.md
+++ b/docs/policies/2q.md
@@ -1,5 +1,7 @@
 # 2Q
 
+**Feature:** `policy-two-q`
+
 ## Goal
 Reduce scan pollution with a simple two-queue design that approximates "access twice before protection".
 
